refactor: move store out of index.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test/*",
-    "lint": "./node_modules/eslint/bin/eslint.js index.js",
+    "lint": "./node_modules/eslint/bin/eslint.js index.js lib/*",
     "coveralls": "npm run test --  --cov",
     "coverage-report": "npm run coveralls && tap --coverage-report=lcov"
   },
