--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "cookie-signature": "^1.0.6",
-    "fastify-plugin": "^0.2.1",
+    "fastify-plugin": "^0.2.2",
     "uid-safe": "^2.1.5"
   },
   "engines": {
@@ -30,8 +30,8 @@
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
-    "eslint": "^4.9.0",
-    "fastify": "^0.43.0",
+    "eslint": "^4.18.0",
+    "fastify": "^1.0.0-rc.2",
     "fastify-cookie": "^1.2.0",
     "request": "^2.83.0",
     "tap": "^11.0.0"
