--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "coveralls": "^3.0.0",
     "eslint": "^4.19.1",
-    "fastify": "^1.0.0-rc.2",
+    "fastify": "^1.2.1",
     "fastify-cookie": "^2.0.1",
     "request": "^2.85.0",
     "tap": "^11.0.0"
