--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fastify-session",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "a session plugin for fastify",
-  "main": "index.js",
+  "main": "lib/fastifySession.js",
   "scripts": {
     "unit": "tap test/*.test.js",
     "test": "npm run lint && npm run unit",
