--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "fastify-cookie": "^3.0.0",
     "request": "^2.88.0",
     "standard": "^12.0.1",
-    "tap": "^13.1.2"
-  }
+    "tap": "^13.1.2",
+    "typescript": "^3.4.5"
+  },
+  "types": "types/types.d.ts"
 }
