--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "a session plugin for fastify",
   "main": "lib/fastifySession.js",
   "scripts": {
-    "unit": "tap test/*.test.js",
+    "unit": "ava test/*.test.js",
     "tsc-check": "tsc --project ./types/tsconfig.json --noEmit",
     "test": "npm run lint && npm run unit && npm run tsc-check",
     "lint": "standard lib/* test/*",
-    "coveralls": "npm run unit --  --cov",
-    "coverage-report": "npm run coveralls && tap --coverage-report=lcov"
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc npm test && nyc report --reporter=html"
   },
   "keywords": [
     "session",
@@ -31,12 +31,13 @@
   },
   "devDependencies": {
     "@types/node": "^12.0.2",
+    "ava": "^2.4.0",
     "coveralls": "^3.0.3",
     "fastify": "^2.0.0",
     "fastify-cookie": "^3.0.0",
+    "nyc": "^14.1.1",
     "request": "^2.88.0",
     "standard": "^14.0.0",
-    "tap": "^14.0.0",
     "typescript": "^3.4.5"
   },
   "types": "types/types.d.ts",
