feat: enforce coverage 100%

--- a/.nycrc
+++ b/.nycrc
@@ -2,5 +2,9 @@
     "all": true,
     "check-coverage": true,
     "reporter": [ "lcov", "text" ],
-    "include": [ "lib" ]
+    "include": [ "lib" ],
+    "branches": 100,
+    "lines": 100,
+    "functions": 100,
+    "statements": 100
 }
