--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "ava": "^3.6.0",
     "fastify": "^3.0.0",
     "fastify-cookie": "^5.3.1",
+    "got": "^11.6.0",
     "nyc": "^15.0.0",
     "standard": "^16.0.1",
     "tsd": "^0.19.0",
-    "typescript": "^4.0.2",
-    "undici": "^4.16.0"
+    "typescript": "^4.0.2"
   },
   "types": "types/types.d.ts",
   "files": [
