--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "unit": "ava test/*.test.js",
     "tsc-check": "tsd",
     "test": "npm run lint && npm run unit && npm run tsc-check",
-    "lint": "standard lib/* test/*",
+    "benchmark": "node bench.js",
+    "lint": "standard lib/* test/* bench.js",
     "coveralls": "nyc npm test",
     "coverage": "nyc npm test && nyc report --reporter=html"
   },
@@ -32,9 +33,14 @@
   "devDependencies": {
     "@types/node": "^17.0.0",
     "ava": "^4.1.0",
+    "connect-redis": "^6.1.3",
+    "cronometro": "^0.8.0",
     "fastify": "^3.0.0",
     "fastify-cookie": "^5.3.1",
     "nyc": "^15.0.0",
+    "published-session": "npm:@fastify/session@latest",
+    "redis": "^4.0.6",
+    "session-file-store": "^1.5.0",
     "standard": "^16.0.1",
     "tsd": "^0.20.0",
     "typescript": "^4.0.2",
