--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
     "ava": "^4.1.0",
     "connect-redis": "^6.1.3",
     "cronometro": "^0.8.0",
-    "fastify": "^3.0.0",
-    "fastify-cookie": "^5.3.1",
+    "fastify": "^4.0.0-rc.2",
+    "@fastify/cookie": "^7.0.0",
     "nyc": "^15.0.0",
-    "published-session": "npm:@fastify/session@latest",
     "redis": "^4.0.6",
     "session-file-store": "^1.5.0",
     "sinon": "^13.0.1",
