--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "url": "git+https://github.com/fastify/session.git"
   },
   "devDependencies": {
+    "@fastify/cookie": "^7.0.0",
     "@types/node": "^17.0.0",
     "ava": "^4.1.0",
     "connect-redis": "^6.1.3",
-    "cronometro": "^0.8.0",
+    "cronometro": "^1.1.0",
     "fastify": "^4.0.0-rc.2",
-    "@fastify/cookie": "^7.0.0",
+    "fastify-cookie": "~5.6.0",
+    "ioredis": "^5.0.5",
     "nyc": "^15.0.0",
-    "redis": "^4.0.6",
+    "published-session": "npm:@fastify/session@latest",
     "session-file-store": "^1.5.0",
     "sinon": "^14.0.0",
     "standard": "^17.0.0",
