--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "lib/fastifySession.js",
   "scripts": {
     "test": "npm run test:unit && npm run test:typescript",
-    "test:unit": "ava test/*.test.js",
+    "test:unit": "tap",
     "test:typescript": "tsd",
     "benchmark": "node bench.js",
     "lint": "standard lib/* test/* bench.js",
-    "coveralls": "nyc npm test",
-    "coverage": "nyc npm test && nyc report --reporter=html"
+    "coveralls": "tap --coverage-report=lcov",
+    "coverage": "tap --coverage-report=html"
   },
   "keywords": [
     "session",
@@ -31,20 +31,17 @@
   "devDependencies": {
     "@fastify/cookie": "^7.0.0",
     "@types/node": "^18.0.0",
-    "ava": "^4.1.0",
     "connect-redis": "^6.1.3",
     "cronometro": "^1.1.0",
-    "fastify": "^4.0.0-rc.2",
+    "fastify": "^4.3.0",
     "fastify-cookie": "~5.7.0",
     "ioredis": "^5.0.5",
-    "nyc": "^15.0.0",
     "published-session": "npm:@fastify/session@latest",
     "session-file-store": "^1.5.0",
     "sinon": "^14.0.0",
     "standard": "^17.0.0",
-    "tsd": "^0.22.0",
-    "typescript": "^4.0.2",
-    "undici": "^5.0.0"
+    "tap": "^16.3.0",
+    "tsd": "^0.22.0"
   },
   "types": "types/types.d.ts",
   "files": [
