--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm run test:unit && npm run test:typescript",
     "test:unit": "tap",
     "test:typescript": "tsd",
-    "benchmark": "node bench.js",
-    "lint": "standard lib/* test/* bench.js",
+    "benchmark": "node benchmark/bench.js",
+    "lint": "standard lib/* test/* benchmark/*.js",
     "coveralls": "tap --coverage-report=lcov",
     "coverage": "tap --coverage-report=html"
   },
@@ -34,9 +34,7 @@
     "connect-redis": "^6.1.3",
     "cronometro": "^1.1.0",
     "fastify": "^4.3.0",
-    "fastify-cookie": "~5.7.0",
     "ioredis": "^5.0.5",
-    "published-session": "npm:@fastify/session@latest",
     "session-file-store": "^1.5.0",
     "sinon": "^14.0.0",
     "standard": "^17.0.0",
