--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@fastify/cookie": "^8.0.0",
+    "@fastify/pre-commit": "^2.0.2",
     "@types/node": "^18.0.0",
     "connect-redis": "^6.1.3",
     "cronometro": "^1.1.0",
@@ -42,5 +43,9 @@
   "files": [
     "lib",
     "types/types.d.ts"
+  ],
+  "pre-commit": [
+    "lint",
+    "test"
   ]
 }
