--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@fastify/pre-commit": "^2.0.2",
     "@types/node": "^20.1.0",
     "connect-mongo": "^5.0.0",
-    "connect-redis": "^7.0.0",
+    "connect-redis": "7.0.0",
     "cronometro": "^1.1.0",
     "fastify": "^4.3.0",
     "ioredis": "^5.0.5",
