--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "url": "git+https://github.com/fastify/session.git"
   },
   "devDependencies": {
-    "@fastify/cookie": "^9.3.1",
+    "@fastify/cookie": "^10.0.0-pre.fv5.1",
     "@fastify/pre-commit": "^2.1.0",
     "@types/node": "^22.0.0",
     "connect-mongo": "^5.1.0",
     "connect-redis": "^7.1.1",
     "cronometro": "^3.0.2",
-    "fastify": "^4.26.2",
+    "fastify": "^5.0.0-alpha.3",
     "ioredis": "^5.3.2",
     "session-file-store": "^1.5.0",
     "standard": "^17.1.0",
