--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "connect-mongo": "^5.1.0",
     "connect-redis": "^7.1.1",
     "cronometro": "^3.0.2",
-    "fastify": "^5.0.0-alpha.4",
+    "fastify": "^5.0.0",
     "ioredis": "^5.3.2",
     "session-file-store": "^1.5.0",
     "standard": "^17.1.0",
